# Geek-Killer-Pro

./: .gitignore  README.md  使用说明_Release_Notes.txt  技术要点与避坑指南.md
docs/internal/: win结束进程工具.md
geek_killer/: .gitignore  Cargo.toml  Task.ps1  app.manifest  build.rs  verify.ps1
geek_killer/src/: main.rs
