[package]
name = "geek_killer"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.30.13"
eframe = "0.26.2"
windows-sys = { version = "0.52.0", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading"] }
image = { version = "0.24", features = ["ico"] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
